--- a/Frontend_and_UI_Design/Django_Pages_2/form_diab.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/form_diab.html
@@ -79,13 +79,17 @@
                     <div class="grid-item" id="grid-item1">
                         <div>High BP</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighBP" id="Yes1" value="Yes"required>
-                                <label class="form-check-label" for="Yes1">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighBP" id="Yes1" value="Yes"required>
+                                    <label class="form-check-label" for="Yes1">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighBP" id="No1" value="No"required>
-                                <label class="form-check-label" for="No1">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighBP" id="No1" value="No"required>
+                                    <label class="form-check-label" for="No1">No</label>
+                                </div>
                             </div>
                         </div>
 
@@ -94,13 +98,17 @@
                     <div class="grid-item" id="grid-item2">
                         <div>High Cholestrol</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighChol" id="Yes2" value="Yes"required>
-                                <label class="form-check-label" for="Yes2">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighChol" id="Yes2" value="Yes"required>
+                                    <label class="form-check-label" for="Yes2">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighChol" id="No2" value="No"required>
-                                <label class="form-check-label" for="No2">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighChol" id="No2" value="No"required>
+                                    <label class="form-check-label" for="No2">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -110,13 +118,17 @@
                     <div class="grid-item" id="grid-item4">
                         <div>Stroke</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Stroke" id="Yes3" value="Yes"required>
-                                <label class="form-check-label" for="Yes3">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="Stroke" id="Yes3" value="Yes"required>
+                                    <label class="form-check-label" for="Yes3">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Stroke" id="No3" value="No"required>
-                                <label class="form-check-label" for="No3">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="Stroke" id="No3" value="No"required>
+                                    <label class="form-check-label" for="No3">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -124,13 +136,17 @@
                     <div class="grid-item" id="grid-item5">
                         <div>HeartDisease or Attack</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="Yes4" value="Yes" required>
-                                <label class="form-check-label" for="Yes4">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="Yes4" value="Yes" required>
+                                    <label class="form-check-label" for="Yes4">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="No4" value="No" required>
-                                <label class="form-check-label" for="No4">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="No4" value="No" required>
+                                    <label class="form-check-label" for="No4">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
