--- a/Frontend_and_UI_Design/Django_Pages_2/form_heart.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/form_heart.html
@@ -87,13 +87,17 @@
                     <div class="grid-item" id="grid-item5">
                         <div>Smoking</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Smoking" id="Yes1" value="Yes" required>
-                                <label class="form-check-label" for="Yes1">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="Smoking" id="Yes1" value="Yes" required>
+                                    <label class="form-check-label" for="Yes1">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Smoking" id="No1" value="No" required>
-                                <label class="form-check-label" for="No1">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="Smoking" id="No1" value="No" required>
+                                    <label class="form-check-label" for="No1">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -101,13 +105,17 @@
                     <div class="grid-item" id="grid-item6">
                         <div>Physical Activity</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="PhysicalActivity" id="Yes2" value="Yes" required>
-                                <label class="form-check-label" for="Yes2">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="PhysicalActivity" id="Yes2" value="Yes" required>
+                                    <label class="form-check-label" for="Yes2">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="PhysicalActivity" id="No2" value="No" required>
-                                <label class="form-check-label" for="No2">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="PhysicalActivity" id="No2" value="No" required>
+                                    <label class="form-check-label" for="No2">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
