static files changes

--- a/Frontend_and_UI_Design/Static pages/Diabetes page/index.html
+++ b/Frontend_and_UI_Design/Static pages/Diabetes page/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="./style.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
+    <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css"/>
 
     <style>
       a,
@@ -38,7 +39,7 @@
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
       >
-        <path
+      <path
           d="M3.98317 40.7006H0.984863C1.19903 30.1793 1.58452 8.43084 1.41319 5.60671C1.24186 2.78259 4.91122 0.692187 6.76731 0H18.118C21.8873 0.498375 23.5436 3.80703 23.9005 5.60671V20.7656H21.1164V6.02203C21.1164 3.53015 18.5464 2.76875 17.2614 2.69953H7.62397C5.05399 2.69953 4.12595 5.1914 3.98317 6.43734V40.7006Z"
           fill="#E61616"
         />
